--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,8 +59,7 @@
                     <li class="nav-item"><a class="nav-link " href="#">ENGLISH</a></li>
                 </ul>
                 <div class="my-2"><button class="btn btn-light me-2" type="button" data-bs-toggle="popover"
-                        data-bs-title="註冊"
-                        data-bs-content="很抱歉，目前尚不開放訪客進行註冊。">註冊</button>
+                        data-bs-title="註冊" data-bs-content="很抱歉，目前尚不開放訪客進行註冊。">註冊</button>
                     <a class="btn btn-primary" role="button" data-bs-toggle="modal"
                         data-bs-target="#exampleModal">登入</a>
                 </div>
@@ -86,6 +85,7 @@
                     新北市淡水區英專路151號（資管系辦公室）</span><br><span style="color: rgba(255, 255, 255, 0.75);">No.151, Yingzhuan
                     Rd., Tamsui Dist., New Taipei City 251301, Taiwan (R.O.C.)</span><br><span
                     style="color: rgba(255, 255, 255, 0.75);">中華民國資訊管理學會 版權所有 @2013 CSIM All Rights Reserved.</span></p>
+            <p class="mb-0"><span style="color: rgba(255, 255, 255, 0.75);">本網站非官網，僅作為作業練習使用。</span></p>
         </div>
     </footer>
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
