修正頁尾訊息的翻譯錯誤

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,7 +85,7 @@
                     新北市淡水區英專路151號（資管系辦公室）</span><br><span style="color: rgba(255, 255, 255, 0.75);">No.151, Yingzhuan
                     Rd., Tamsui Dist., New Taipei City 251301, Taiwan (R.O.C.)</span><br><span
                     style="color: rgba(255, 255, 255, 0.75);">中華民國資訊管理學會 版權所有 @2013 CSIM All Rights Reserved.</span></p>
-            <p class="mb-0"><span style="color: rgba(255, 255, 255, 0.75);">本網站非官網，僅作為作業練習使用。</span></p>
+            <p class="mb-0"><span style="color: rgba(255, 255, 255, 0.75);">本網站非官網，僅為作業練習使用。</span></p>
         </div>
     </footer>
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
