Fix date format in sidebar.html

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
             style="color: var(--bs-primary);overflow: hidden;text-overflow: ellipsis;/*white-space: nowrap;*/">{{
             post.title }}</a>
         <!-- <p>{{ post.excerpt }}</p> -->
-        <h6 style="margin-top: 15px;">{{ post.date | date: "%Y-%-m-%-d" }}</h6>
+        <h6 style="margin-top: 15px;">{{ post.date | date: "%Y-%m-%d" }}</h6>
         <hr style="border: 1px dashed #000;">
     </div>
     {% endfor %}
@@ -28,7 +28,7 @@
                 style="color: var(--bs-primary);overflow: hidden;text-overflow: ellipsis;/*white-space: nowrap;*/">{{
                 post.title }}</a>
             <!-- <p>{{ post.excerpt }}</p> -->
-            <h6 style="margin-top: 15px;">{{ post.date | date: "%Y-%-m-%-d" }}</h6>
+            <h6 style="margin-top: 15px;">{{ post.date | date: "%Y-%m-%d" }}</h6>
             <hr style="border: 1px dashed #000;">
         </div>
         {% endfor %}
@@ -50,7 +50,7 @@
                 style="color: var(--bs-primary);overflow: hidden;text-overflow: ellipsis;/*white-space: nowrap;*/">{{
                 post.title }}</a>
             <!-- <p>{{ post.excerpt }}</p> -->
-            <h6 style="margin-top: 15px;">{{ post.date | date: "%Y-%-m-%-d" }}</h6>
+            <h6 style="margin-top: 15px;">{{ post.date | date: "%Y-%m-%d" }}</h6>
             <hr style="border: 1px dashed #000;">
         </div>
         {% endfor %}
