Update permalink structure for paginated pages and fix breadcrumb links in pages.html

--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -17,7 +17,7 @@ layout: default
                                 {% if page.url == '/confernece' or page.url == '/papers' %}
                                     <li class="breadcrumb-item"><a href="#"><span>研究及出版品</span></a></li>
                                 {% endif %}
-                                {% if page.url contains '/news' and page.url != '/news' %}
+                                {% if page.url contains '/news' and page.url != '/news/index.html' %}
                                     <li class="breadcrumb-item"><a href="/news"><span>最新消息</span></a></li>
                                 {% endif %}
                                 {% if page.url contains '/about' and page.url != '/about' %}
