Update styles.css, news_by_categories.html, posts.html, home.html, index.html, and sidebar.html

--- a/_includes/news_by_categories.html
+++ b/_includes/news_by_categories.html
@@ -16,3 +16,10 @@
         {% endfor %}
     </tbody>
 </table>
+
+
+<style>
+    .tr_hover:hover {
+        --bs-table-bg: var(--bs-secondary-bg-subtle);
+    }
+</style>
