--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,29 +1,7 @@
-<div>
-    <h4 style="font-size: 20px;"><strong>資訊管理學會</strong></h4>
-    {% assign postsByYearMonth = site.categories["資訊管理學會"] | group_by_exp: "post", "post.date | date: '%Y年 %_m月'" %}
-    {% for yearMonth in postsByYearMonth %}
-    {% for post in yearMonth.items %}
-    <div><a href="{{ post.url }}"
-            style="color: var(--bs-primary);overflow: hidden;text-overflow: ellipsis;/*white-space: nowrap;*/">{{
-            post.title }}</a>
-        <!-- <p>{{ post.excerpt }}</p> -->
-        <h6 style="margin-top: 15px;">{{ post.date | date: "%Y-%m-%d" }}</h6>
-        <hr style="border: 1px dashed #000;">
-    </div>
-    {% endfor %}
-    {% endfor %}
-    <div style="text-align: right;">
-        <a class="btn btn-light btn-sm" href="/news/CSIM">查詢更多</a>
-    </div>
-</div>
-
-<div style="margin-top: 25px;">
-    <h4 style="font-size: 25px;"><strong>學校</strong></h4>
-    <div>
-        {% assign postsByYearMonth = site.categories["學校"] | group_by_exp: "post", "post.date | date: '%Y年 %_m月'" %}
-        {% assign sortedPosts = postsByYearMonth | sort: 'name' | reverse %}
-        {% for yearMonth in sortedPosts limit:2 %}
-        {% for post in yearMonth.items limit:2 %}
+<div style="background-color: white; margin-top: -20px; margin-bottom: 20px;">
+    <div class="block">
+        <h4 style="font-size: 20px; margin-top: 10px;"><strong>資訊管理學會</strong></h4>
+        {% for post in site.categories["資訊管理學會"] %}
         <div><a href="{{ post.url }}"
                 style="color: var(--bs-primary);overflow: hidden;text-overflow: ellipsis;/*white-space: nowrap;*/">{{
                 post.title }}</a>
@@ -32,20 +10,17 @@
             <hr style="border: 1px dashed #000;">
         </div>
         {% endfor %}
-        {% endfor %}
-    </div>
-    <div style="text-align: right;">
-        <a class="btn btn-light btn-sm" href="/news/school">查詢更多</a>
+        <div style="text-align: right;">
+            <a class="btn btn-light btn-sm" href="/news/CSIM">查詢更多</a>
+        </div>
     </div>
 </div>
 
-<div style="margin-top: 25px;">
-    <h4 style="font-size: 20px;"><strong>業界</strong></h4>
-    <div>
-        {% assign postsByYearMonth = site.categories["業界"] | group_by_exp: "post", "post.date | date: '%Y年 %_m月'" %}
-        {% assign sortedPosts = postsByYearMonth | sort: 'name' | reverse %}
-        {% for yearMonth in sortedPosts %}
-        {% for post in yearMonth.items %}
+
+<div style="background-color: white;">
+    <div class="block">
+        <h4 style="font-size: 20px; margin-top: 10px;"><strong>學校</strong></h4>
+        {% for post in site.categories["學校"] %}
         <div><a href="{{ post.url }}"
                 style="color: var(--bs-primary);overflow: hidden;text-overflow: ellipsis;/*white-space: nowrap;*/">{{
                 post.title }}</a>
@@ -54,6 +29,28 @@
             <hr style="border: 1px dashed #000;">
         </div>
         {% endfor %}
+        <div style="text-align: right;">
+            <a class="btn btn-light btn-sm" href="/news/CSIM">查詢更多</a>
+        </div>
+    </div>
+</div>
+
+<div style="background-color: white;">
+    <div class="block">
+        <h4 style="font-size: 20px; margin-top: 10px;"><strong>業界</strong></h4>
+        {% for post in site.categories["業界"] %}
+        <div><a href="{{ post.url }}"
+                style="color: var(--bs-primary);overflow: hidden;text-overflow: ellipsis;/*white-space: nowrap;*/">{{
+                post.title }}</a>
+            <!-- <p>{{ post.excerpt }}</p> -->
+            <h6 style="margin-top: 15px;">{{ post.date | date: "%Y-%m-%d" }}</h6>
+            <hr style="border: 1px dashed #000;">
+        </div>
         {% endfor %}
+        <div style="text-align: right;">
+            <a class="btn btn-light btn-sm" href="/news/CSIM">查詢更多</a>
+            <!--         <a class="btn btn-light btn-sm" href="/news/school">查詢更多</a>
+ -->
+        </div>
     </div>
 </div>
