--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,9 @@ layout: default
 <div class="container">
     <div class="row" style="margin-bottom: 25px;">
         <div class="col-md-8">
-            <h2 style="padding-bottom: 7px;font-size: 25px;"><strong>最新消息</strong></h2>
+            <div style="background-color: white;border-radius: 0px; margin-left: -20px; padding-left: 25px;">
+                <h2 style="font-size: 25px; height: 70px; line-height: 68px;"><strong>最新消息</strong></h2>
+            </div>
             {{ content }}
         </div>
         <div class="col-md-4">
