--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -3,9 +3,14 @@ layout: pages
 ---
 
 <div class="container">
-    <div class="row" style="margin-bottom: 25px;">
+    <div class="row">
         <div class="col-md-8 content">
-            {{ content }}
+            <div style="background-color: white; padding: 5px 0px 5px 5px; margin-right: 20px;">
+                <div class="block">
+                    {{ content }}
+                </div>
+            </div>
+
         </div>
         <div class="col-md-4">
             {% include sidebar.html %}
