--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,12 @@
+body {
+  background-color: #f5f5f5;
+}
+
+.block {
+  margin: 20px 20px 20px 20px;
+  padding: 5px 5px 5px 5px;
+}
+
 .content h1,
 h2,
 h3,
