--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,7 @@ layout: default
 <div class="container">
     <div class="row" style="margin-bottom: 25px;">
         <div class="col-md-8">
-            <div style="background-color: white;border-radius: 0px; margin-left: -20px; padding-left: 25px;">
+            <div style="background-color: white;border-radius: 0px; margin-left: -20px; padding-left: 25px; border-left: 7px solid #0b2041;">
                 <h2 style="font-size: 25px; height: 70px; line-height: 68px;"><strong>最新消息</strong></h2>
             </div>
             {{ content }}
