Update links and styles in 404 page, sidebar, home layout, pages layout, and posts layout

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,7 +17,7 @@
             {% endfor %}
             <div style="text-align: right; margin-bottom: 15px;">
                 {% if category_s == "資訊管理學會" %}
-                    <a class="btn btn-light btn-sm" href="/news/CISM">查詢更多</a>
+                    <a class="btn btn-light btn-sm" href="/news/CSIM">查詢更多</a>
                 {% elsif category_s == "學校" %}
                     <a class="btn btn-light btn-sm" href="/news/school">查詢更多</a>
                 {% elsif category_s == "業界" %}
