--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -58,7 +58,7 @@ layout: default
 </section>
 <div class="container">
     <div class="row" style="margin-bottom: 25px;">
-        {% if page.layout != "posts" %}
+        {% if page.layout != "posts" and  page.layout != "carousel" %}
         <div class="col-md-12 content"
             style="text-align: justify;background-color: white;">
             <div class="block">
