--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: default
     <div class="carousel-inner">
         <div class="carousel-item active home-carousel-item"><img class="w-100 d-block"
                 src="/assets/img/dian_zi_heng_fu_-1500x400dpi-3_0.jpg" alt="Slide Image"></div>
-        <div class="carousel-item"><img class="w-100 d-block" src="/assets/img/20230824b.png" alt="Slide Image">
+        <div class="carousel-item home-carousel-item"><img class="w-100 d-block" src="/assets/img/20230824b.png" alt="Slide Image">
         </div>
     </div>
     <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span
@@ -19,8 +19,8 @@ layout: default
 </div>
 <div class="container">
     <div class="row" style="margin-bottom: 25px;">
-        <div class="col-md-8">
-            <div style="background-color: white;border-radius: 0px; margin-left: -20px; padding-left: 25px; border-left: 7px solid #0b2041;">
+        <div class="col-md-8" style="margin-bottom: 30px;">
+            <div style="background-color: white;border-radius: 0px; padding-left: 25px; border-left: 7px solid #0b2041;">
                 <h2 style="font-size: 25px; height: 70px; line-height: 68px;"><strong>最新消息</strong></h2>
             </div>
             {{ content }}
