--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -4,8 +4,8 @@ layout: pages
 
 <div class="container">
     <div class="row">
-        <div class="col-md-8 content">
-            <div style="background-color: white; padding: 5px 0px 5px 5px; margin-right: 20px;">
+        <div class="col-md-8 content" style="margin-bottom: 30px;">
+            <div style="background-color: white; padding: 5px 0px 5px 5px;">
                 <div class="block">
                     {{ content }}
                 </div>
