--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,9 +29,33 @@ li {
   border-bottom-left-radius: 0;
 }
 
+@media screen and (max-width: 576px) {
+  .home-carousel-item {
+    height: 100px !important;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .home-carousel-item {
+    height: 160px !important;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .home-carousel-item {
+    height: 220px !important;
+  }
+}
+
+@media screen and (max-width: 1140px) {
+  .home-carousel-item {
+    height: 280px !important;
+  }
+}
+
 .home-carousel-item {
   width: 100%;
-  height: 300px !important;
+  height: 300px;
 }
 
 .home-carousel-item img {
@@ -78,6 +102,3 @@ ol.breadcrumb>li.breadcrumb-item>a {
   text-decoration: none;
 }
 
-@media screen and (max-width: 300px) {
-  /*height: 300px !important;*/
-}
