Fix layout overflow issue and add min-height to block

--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -61,7 +61,7 @@ layout: default
         {% if page.layout != "posts" and  page.layout != "carousel" %}
         <div class="col-md-12 content"
             style="text-align: justify;background-color: white;">
-            <div class="block">
+            <div class="block overflow">
                 {{ content }}
             </div>
            
