--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -4,7 +4,7 @@ layout: pages
 
 <div class="container">
     <div class="row">
-        <div class="col-md-8 content" style="margin-bottom: 30px;">
+        <div class="col-md-12 col-lg-8 content" style="margin-bottom: 30px;">
             <div style="background-color: white; padding: 5px 0px 5px 5px;">
                 <div class="block">
                     {{ content }}
@@ -12,7 +12,7 @@ layout: pages
             </div>
 
         </div>
-        <div class="col-md-4">
+        <div class="col-md-12 col-lg-4">
             {% include sidebar.html %}
         </div>
     </div>
