--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
                     <li class="nav-item"></li>
                     <li class="nav-item"><a class="nav-link " href="/galleries">活動花絮</a></li>
                     <li class="nav-item"><a class="nav-link " href="/contact-us">聯絡我們</a></li>
-                    <li class="nav-item"><a class="nav-link " href="#">ENGLISH</a></li>
+                    <li class="nav-item"><a class="nav-link " href="/english">ENGLISH</a></li>
                 </ul>
                 <div class="my-2"><button class="btn btn-light me-2" type="button" data-bs-toggle="popover"
                         data-bs-title="註冊" data-bs-content="很抱歉，目前尚不開放訪客進行註冊。">註冊</button>
