--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -58,13 +58,13 @@ layout: default
 </section>
 <div class="container">
     <div class="row" style="margin-bottom: 25px;">
-        {% if page.layout != "posts" and  page.layout != "carousel" %}
-        <div class="col-md-12 content"
-            style="text-align: justify;background-color: white;">
-            <div class="block">
-                {{ content }}
+        {% if page.layout != "posts" and page.layout != "carousel" %}
+        <div class="col-md-12 content" style="text-align: justify;">
+            <div style="background-color: white; padding: 5px 0px 5px 5px;">
+                <div class="block">
+                    {{ content }}
+                </div>
             </div>
-           
         </div>
         {% else %}
         <div class="col-md-12 content" style="text-align: justify;">
