Update categories and layout styles

--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -42,7 +42,8 @@ layout: default
                         <p style="color: var(--bs-secondary-border-subtle);"><i class="fa fa-user-circle"></i>&nbsp;
                             {{ page.author | default: "csim" }}&nbsp;&nbsp;<i class="fa fa-clock-o"></i> 發表於&nbsp;{{
                             page.date | date: "%Y-%m-%d %H:%M" }}&nbsp;<br>
-                            <i class="fa fa-tag"></i>&nbsp; {{ page.categories }}
+                            <i class="fa fa-tag"></i>&nbsp;
+                            {{ page.categories }}
                         </p>
                         {% endif %}
 
@@ -56,21 +57,20 @@ layout: default
         </div>
     </div>
 </section>
-<div class="container">
-    <div class="row" style="margin-bottom: 25px;">
-        {% if page.layout != "posts" and page.layout != "carousel" %}
-        <div class="col-md-12 content" style="text-align: justify;">
-            <div style="background-color: white; padding: 5px 0px 5px 5px;">
-                <div class="block">
-                    {{ content }}
+<div style="margin-bottom: 25px; text-align: justify;">
+    {% if page.layout != "posts" and page.layout != "carousel" %}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 content">
+                <div class="block-before">
+                    <div class="block">
+                        {{ content }}
+                    </div>
                 </div>
             </div>
         </div>
-        {% else %}
-        <div class="col-md-12 content" style="text-align: justify;">
-            {{ content }}
-        </div>
-        {% endif %}
     </div>
-</div>
+    {% else %}
+    {{ content }}
+    {% endif %}
 </div>
