--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,13 +19,13 @@ layout: default
 </div>
 <div class="container">
     <div class="row" style="margin-bottom: 25px;">
-        <div class="col-md-8" style="margin-bottom: 30px;">
+        <div class="col-md-12 col-lg-8 content" style="margin-bottom: 30px;">
             <div style="background-color: white;border-radius: 0px; padding-left: 25px; border-left: 7px solid #0b2041;">
                 <h2 style="font-size: 25px; height: 70px; line-height: 68px;"><strong>最新消息</strong></h2>
             </div>
             {{ content }}
         </div>
-        <div class="col-md-4">
+        <div class="col-md-12 col-lg-4">
             {% include sidebar.html %}
         </div>
     </div>
