--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -5,7 +5,7 @@ layout: pages
 <div class="container">
     <div class="row">
         <div class="col-md-12 col-lg-8 content" style="margin-bottom: 30px;">
-            <div style="background-color: white; padding: 5px 0px 5px 5px;">
+            <div class="block-before">
                 <div class="block">
                     {{ content }}
                 </div>
