--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,39 @@ body {
   background-color: #f5f5f5;
 }
 
+.dropdown-menu a {
+  /* color: var(--bs-primary); */
+  color: black;
+  
+}
+
+.nav-link:focus, .nav-link:hover{
+  /* color: var(--bs-primary); */
+  color: black;
+  font-weight: bold;
+  
+}
+
+.nav-link {
+  color: black;
+}
+
+.navbar .nav-link {
+  /* font-size: 14px; */
+  letter-spacing: 1px;
+}
+
+.navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
+  font-weight: bold;
+}
+
+.dropdown-menu {
+  /* border: 0px; */
+}
+.dropdown-item:hover {
+  color: white;
+  background-color: var(--bs-primary);
+}
 .overflow {
   overflow: auto;
 }
