--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,7 @@
+:root {
+  scroll-padding-top: 90px;
+}
+
 body {
   background-color: #f5f5f5;
 }
@@ -5,14 +9,21 @@ body {
 .dropdown-menu a {
   /* color: var(--bs-primary); */
   color: black;
-  
-}
 
-.nav-link:focus, .nav-link:hover{
+}
+/* 
+.block h2:before {
+  content: "";
+  display: block;
+  height: 10px;
+} */
+
+.nav-link:focus,
+.nav-link:hover {
   /* color: var(--bs-primary); */
   color: black;
   font-weight: bold;
-  
+
 }
 
 .nav-link {
@@ -24,17 +35,20 @@ body {
   letter-spacing: 1px;
 }
 
-.navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
+.navbar-nav .nav-link.active,
+.navbar-nav .nav-link.show {
   font-weight: bold;
 }
 
 .dropdown-menu {
   /* border: 0px; */
 }
+
 .dropdown-item:hover {
   color: white;
   background-color: var(--bs-primary);
 }
+
 .overflow {
   overflow: auto;
 }
@@ -74,7 +88,7 @@ body {
 }
 
 .home-post-list p {
-  font-size: 16px!important;
+  font-size: 16px !important;
 }
 
 .home-post-list h6 {
