Update TOC heading and scroll padding

--- a/_layouts/pages_TOC.html
+++ b/_layouts/pages_TOC.html
@@ -6,7 +6,7 @@ layout: pages
     <div class="row">
         <div class="col-lg-3 col-md-12 order-lg-1">
             <div class="sticky-top TOC" style="top: 120px;">
-                <h6>文章目錄</h6>
+                <h6>本文目錄</h6>
                 {% include toc.html html=content %}
             </div>
         </div>
@@ -15,8 +15,6 @@ layout: pages
         </div>        
     </div>
 </div>
-
-
 
 <style>
     .TOC a {
